--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="banana"></div>
     <div class="parrot"></div>
     <div class="beach"></div>
     <div class="container">
