add buymecoffee button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <p id="author"></p>
             </div>
             <button id="new-quote">새 명언 보기</button>
+            <div class="coffee-button-container">
+                <a href="https://coff.ee/tkrhktyd7" target="_blank" class="coffee-button">
+                    <img src="data:image/svg+xml,%3Csvg width='25' height='35' viewBox='0 0 25 35' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22.313 8.723H20.766c-.082-.986-.132-1.887-.132-2.236 0-1.83-1.488-3.317-3.317-3.317H7.683c-1.83 0-3.317 1.488-3.317 3.317 0 .349-.05 1.25-.132 2.236H2.688c-.895 0-1.623.728-1.623 1.623v3.246c0 .895.728 1.623 1.623 1.623h.794v11.362c0 1.83 1.488 3.317 3.317 3.317h11.402c1.83 0 3.317-1.488 3.317-3.317V15.215h.794c.895 0 1.623-.728 1.623-1.623v-3.246c0-.895-.728-1.623-1.623-1.623zM6.06 6.487c0-.895.728-1.623 1.623-1.623h9.634c.895 0 1.623.728 1.623 1.623 0 .349.05 1.25.132 2.236H5.928c.082-.986.132-1.887.132-2.236zm13.769 20.09c0 .895-.728 1.623-1.623 1.623H6.794c-.895 0-1.623-.728-1.623-1.623V15.215h14.658v11.362zm2.417-14.608h-19.5v-1.623h19.5v1.623z' fill='%23000000'/%3E%3C/svg%3E" alt="커피 아이콘" class="coffee-icon">
+                    <span>Buy me a coffee</span>
+                </a>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
